--- a/templates/delete_form.html
+++ b/templates/delete_form.html
@@ -6,7 +6,7 @@
         <body>
             <div id="container">
                 <div class="form">
-                    <form action="/delete" method="DELETE">
+                    <form action="/delete" method="POST">
                         <div id="input-1">
                             <label for="name">Insert Movie Name (Delete):</label>
                             <input type="text" name="name" id='name' required>
