update html forms

--- a/templates/read_form.html
+++ b/templates/read_form.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
     <html lang="en">
         <head>
-            <title>Delete A Movie Poster </title>
+            <title>Read A Movie Poster </title>
         </head>
         <body>
             <div id="container">
                 <div class="form">
-                    <form action="/mongo/delete" method="POST">
+                    <form action="/mongo" method="POST">
                         <div id="input-1">
-                            <label for="name">Insert Movie Name (Delete):</label>
+                            <label for="name">Insert Movie Name:</label>
                             <input type="text" name="name" id='name' required>
                         </div>
                         <br>
