--- a/templates/new_form.html
+++ b/templates/new_form.html
@@ -6,7 +6,7 @@
         <body>
             <div id="container">
                 <div class="form">
-                    <form action="/search" method="POST">
+                    <form action="/create" method="POST">
                         <div id="input-1">
                             <label for="name">Insert Movie Name:</label>
                             <input type="text" name="name" id='name' required>
