--- a/templates/update_form.html
+++ b/templates/update_form.html
@@ -6,7 +6,7 @@
         <body>
             <div id="container">
                 <div class="form">
-                    <form action="/mongo/update" method="POST">
+                    <form action="/update" method="POST">
                         <input type="hidden" name="_method" value="PUT" />
                         <div id="input-1">
                             <label for="name">Insert Movie Name:</label>
